--- a/index.html
+++ b/index.html
@@ -1,84 +1,59 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Weather Dashboard</title>
+    <title>Weather</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/5a81cc2ea8.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>WEATHER DASHBOARD</h1>
-
-    <div class="container">
+    <div class="container col-12">
       <div class="row">
-        <!-- SEARCH AREA -->
-        <div class="col-3">
-          <h3 id="search-city">Search for a City:</h3>
-          <div>
-            <form>
-              <div class="mb-3">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="search-input"
-                  aria-describedby="searchinput"
-                />
-              </div>
-              <button
-                type="submit"
-                class="btn btn-primary btn-lg fas fa-search-location"
-                id="search-button"
-              ></button>
-            </form>
-          </div>
-          <br />
-          <table class="table table-bordered table-hover">
-            <thead></thead>
-            <tbody id="saved-cities">
-             </tbody>
-          </table>
+        <nav class="navbar navbar-light bg-dark col-sm-12">
+          <a class="navbar-brand" id="title">Weather Dashboard</a>
+        </nav>
+      </div>
+
+      <div class="row main-row">
+        <div col-3>
+          <h4>Search for a City:</h4>
+
+          <form class="form-inline md-form mr-auto mb-4" id="city-form">
+            <input
+              class="form-control mr-sm-2"
+              id="city-input"
+              type="text"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button type="search" class="btn btn-primary fa fa-search">search</button>
+          </form>
+
+          <div id="cities-appear-here"></div>
         </div>
 
-        <!-- CURRENT CITY INFO -->
         <div class="col-9">
-          <div class="row">
-            <div>
-              <h2 id="current-city"></h2>
-              <p id="current-temp">Temperature:</p>
-              <p id="current-humidity">Humidity:</p>
-              <p id="current-wind">Wind Speed:</p>
-              <p id="current-UV">UV Index:</p>
+         
+            <div >
+              <div id="city-weather"></div>
+              <div id="five-day"></div>
             </div>
-          </div>
-          <div class="row" id="forecast-area">
-            <h2 id="forecast-header">5-Day Forecast</h2>
+
           </div>
         </div>
       </div>
     </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.js"
-      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-      crossorigin="anonymous"
-    ></script>
-    <script src="javascript.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
